--- a/init.flash.rc
+++ b/init.flash.rc
@@ -50,9 +50,9 @@ on property:sys.boot_completed=1
    write /dev/cpuset/background/cpus 0-2
    write /dev/cpuset/system-background/cpus 0-2
 
-   # I/O scheduler - maple - 1024kb
+   # I/O scheduler - maple - 512kb
    write /sys/block/mmcblk0/queue/scheduler maple
-   write /sys/block/mmcblk0/queue/read_ahead_kb 1024
+   write /sys/block/mmcblk0/queue/read_ahead_kb 512
    write /sys/block/mmcblk0/queue/iosched/writes_starved 4
    write /sys/block/mmcblk0/queue/iosched/fifo_batch 16
    write /sys/block/mmcblk0/queue/iosched/sync_read_expire 350
@@ -132,6 +132,7 @@ on property:sys.boot_completed=1
 
    # Lazyplug
    write /sys/module/lazyplug/parameters/lazyplug_active 1
+   write /sys/module/lazyplug/parameters/nr_possible_cores 8
 
    # Backlight dimmer
    write /sys/module/mdss_fb/parameters/backlight_dimmer 1
@@ -140,23 +141,22 @@ on property:sys.boot_completed=1
    write /sys/devices/soc.0/fdb00000.qcom,kgsl-3d0/devfreq/fdb00000.qcom,kgsl-3d0/adrenoboost 1
 
    # Sound settings
-   write /sys/kernel/sound_control/speaker_gain "23 23"
-   write /sys/kernel/sound_control/headphone_pa_gain "5 5"
-   write /sys/kernel/sound_control/mic_gain 8
-   write /sys/kernel/sound_control/headphone_gain "0 0"
-
+   write /sys/kernel/sound_control/mic_gain 10
+   
    # UKSM
-   write /sys/kernel/mm/uksm/run 0
+   write /sys/kernel/mm/uksm/run 1
 
-   # Very light LMK profile
-   write /sys/module/lowmemorykiller/parameters/minfree "23939,44091,58788,73485,88182,102879"
-
-   # Memory Values
-   write /proc/sys/vm/swappiness 40
-   write /proc/sys/vm/vfs_cache_pressure 100
+   # # Memory Values
+   write /proc/sys/vm/swappiness 15
+   write /proc/sys/vm/oom_kill_allocating_task 1
+   write /proc/sys/vm/overcommit_memory 1
+   write /proc/sys/vm/overcommit_ratio 75
+   write /proc/sys/vm/vfs_cache_pressure 70
    write /proc/sys/vm/dirty_ratio 80
    write /proc/sys/vm/dirty_background_ratio 50
-   write /proc/sys/vm/min_free_kbytes 4096
+   
+   # Don't treat storage as rotational
+   write /sys/block/mmcblk0/queue/rotational 0
 
    # Vibration strength
    write /sys/class/timed_output/vibrator/vmax_mv_strong 2000
@@ -184,7 +184,10 @@ on property:sys.boot_completed=1
    write /sys/module/wakeup/parameters/enable_wlan_ctrl_wake_ws 0
    write /sys/module/wakeup/parameters/enable_wlan_wake_ws 0
    write /sys/module/wakeup/parameters/enable_ipa_ws 0
-
+   write /sys/module/wakeup/parameters/enable_timerfd_ws 0
+   write /sys/module/wakeup/parameters/enable_netlink_ws 0
+   
+  
    # Special power script - executes three times under different SELinux contexts
    exec u:r:init:s0 root root -- /init.special_power.sh
    exec u:r:su:s0 root root -- /init.special_power.sh
