--- a/init.flash.rc
+++ b/init.flash.rc
@@ -1,5 +1,8 @@
-# Flash Kernel initialization script edited by Deani77
+# Flash Kernel initialization script
 # Pieces taken from @anarkia1976, @franciscofranco, @frap129, and @flar2
+
+# Import Spectrum profiles
+import /init.profiles.rc
 
 on boot
    # Wake gestures
@@ -25,6 +28,12 @@ on boot
    chmod 666 /sys/android_touch/sweep2wake
    write /sys/android_touch/sweep2wake 12
    chmod 644 /sys/android_touch/sweep2wake
+   
+   # Disable camera gesture
+   chown root root /sys/android_touch/camera_gesture
+   chmod 666 /sys/android_touch/camera_gesture
+   write /sys/android_touch/camera_gesture 0
+   chmod 644 /sys/android_touch/camera_gesture
 
    # Set vibration strength to 27 (50% in EXKM)
    chown root root /sys/android_touch/vib_strength
@@ -44,15 +53,48 @@ on property:sys.boot_completed=1
    # from franciscofranco
    setprop dalvik.vm.heapminfree 2m
 
-   # cpuset
-   write /dev/cpuset/foreground/cpus 0-2,4-7
-   write /dev/cpuset/foreground/boost/cpus 4-7
-   write /dev/cpuset/background/cpus 0-2
-   write /dev/cpuset/system-background/cpus 0-2
+   # Make sure governor sys paths have the correct permissions
+   chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
+   chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
+   chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor
+   chmod 0664 /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor
 
-   # I/O scheduler - maple - 512kb
+   # Make sure all the cpufreq sys paths have the correct permissions
+   chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
+   chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
+   chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
+   chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
+   chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq
+   chmod 0664 /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq
+   chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq
+   chmod 0664 /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq
+
+   # Enable Fingerprint boost
+   write /sys/kernel/fp_boost/enabled 1
+
+   # Disable core control, enable msm_thermal
+   write /sys/module/msm_thermal/core_control/enabled 0
+   write /sys/module/msm_thermal/parameters/enabled 1
+
+   # Backlight dimmer
+   write /sys/module/mdss_fb/parameters/backlight_dimmer 1
+
+   # Change Display colour
+   write /sys/devices/platform/kcal_ctrl.0/kcal "216 216 226"
+   
+   # Sound settings
+   write /sys/kernel/sound_control/speaker_gain "23 23"
+   write /sys/kernel/sound_control/headphone_pa_gain "1 1"
+   write /sys/kernel/sound_control/mic_gain 10
+   write /sys/kernel/sound_control/headphone_gain "6 6"
+   
+   # Vibration strength
+   write /sys/class/timed_output/vibrator/vmax_mv_strong 2000
+   write /sys/class/timed_output/vibrator/vmax_mv_light 1650
+
+   # I/O scheduler - maple - 1024kb
    write /sys/block/mmcblk0/queue/scheduler maple
-   write /sys/block/mmcblk0/queue/read_ahead_kb 512
+   write /sys/block/mmcblk0/queue/read_ahead_kb 1024
    write /sys/block/mmcblk0/queue/iosched/writes_starved 4
    write /sys/block/mmcblk0/queue/iosched/fifo_batch 16
    write /sys/block/mmcblk0/queue/iosched/sync_read_expire 350
@@ -61,106 +103,8 @@ on property:sys.boot_completed=1
    write /sys/block/mmcblk0/queue/iosched/async_write_expire 450
    write /sys/block/mmcblk0/queue/iosched/sleep_latency_multiple 10
 
-   # Make sure governor sys paths have the correct permissions
-   chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
-   chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
-   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
-   chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor
-   chmod 0664 /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor
-   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
-
-   # Little cluster min - 384 MHz
-   chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
-   chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
-   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 384000
-   chmod 0444 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
-   # Little cluster max - 1708 MHz
-   chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
-   chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
-   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1708800
-   chmod 0444 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
-   # Big cluster min - 633 MHz
-   chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq
-   chmod 0664 /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq
-   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 633600
-   chmod 0444 /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq
-   # Big cluster max - 2054 MHz
-   chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq
-   chmod 0664 /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq
-   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 2054400
-   chmod 0444 /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq
-
-   # Governor settings by me: PZ_Battery_N6P_F
-   # Little cluster settings
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/go_hispeed_load 155
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/above_hispeed_delay "0 768000:175000 960000:185000 1344000:175000 1478000:120000"
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/timer_rate 80000
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/hispeed_freq 384000
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/timer_slack -1
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads "73 460800:71 600000:77 768000:81 960000:88 1248000:99 1344000:99"
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 25000
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/ignore_hispeed_on_notif 1
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/fast_ramp_down 0
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/align_windows 1
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_migration_notif 0
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_sched_load 0
-   write /sys/devices/system/cpu/cpu0/cpufreq/interactive/max_freq_hysteresis 0
-   
-   # Big cluster settings
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/go_hispeed_load 400
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/above_hispeed_delay "35000 960000:205000 1248000:175000 1440000:80000 1824000:180000"
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_rate 100000
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/hispeed_freq 960000
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_slack -1
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/target_loads "65 768000:75 960000:80 1248000:99 1440000:97 1632000:99"
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/min_sample_time 15000
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/ignore_hispeed_on_notif 1
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/fast_ramp_down 1
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/align_windows 1
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/use_migration_notif 0
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/use_sched_load 0
-   write /sys/devices/system/cpu/cpu4/cpufreq/interactive/max_freq_hysteresis 0
-   
-   # Input boost configuration
-   write /sys/module/cpu_boost/parameters/input_boost_enabled 1
-   write /sys/module/cpu_boost/parameters/input_boost_freq "0:0 1:0 2:0 3:960000 4:0 5:0 6:0 7:0"
-   write /sys/module/cpu_boost/parameters/input_boost_ms 40
-   
-   # Core control disabled, msm_thermal enabled
-   write /sys/module/msm_thermal/core_control/enabled 0
-   write /sys/module/msm_thermal/parameters/enabled Y
-
-   # Lazyplug
-   write /sys/module/lazyplug/parameters/lazyplug_active 1
-   write /sys/module/lazyplug/parameters/nr_possible_cores 8
-
-   # Backlight dimmer
-   write /sys/module/mdss_fb/parameters/backlight_dimmer 1
-
-   # Tune Adrenoboost
-   write /sys/devices/soc.0/fdb00000.qcom,kgsl-3d0/devfreq/fdb00000.qcom,kgsl-3d0/adrenoboost 1
-
-   # Sound settings
-   write /sys/kernel/sound_control/mic_gain 10
-   
-   # UKSM
-   write /sys/kernel/mm/uksm/run 1
-
-   # # Memory Values
-   write /proc/sys/vm/swappiness 15
-   write /proc/sys/vm/oom_kill_allocating_task 1
-   write /proc/sys/vm/overcommit_memory 1
-   write /proc/sys/vm/overcommit_ratio 75
-   write /proc/sys/vm/vfs_cache_pressure 70
-   write /proc/sys/vm/dirty_ratio 80
-   write /proc/sys/vm/dirty_background_ratio 50
-   
    # Don't treat storage as rotational
    write /sys/block/mmcblk0/queue/rotational 0
-
-   # Vibration strength
-   write /sys/class/timed_output/vibrator/vmax_mv_strong 2000
-   write /sys/class/timed_output/vibrator/vmax_mv_light 1650
 
    # Wakelock dividers
    write /sys/module/bcmdhd/parameters/wlrx_divide 8
@@ -186,8 +130,7 @@ on property:sys.boot_completed=1
    write /sys/module/wakeup/parameters/enable_ipa_ws 0
    write /sys/module/wakeup/parameters/enable_timerfd_ws 0
    write /sys/module/wakeup/parameters/enable_netlink_ws 0
-   
-  
+
    # Special power script - executes three times under different SELinux contexts
    exec u:r:init:s0 root root -- /init.special_power.sh
    exec u:r:su:s0 root root -- /init.special_power.sh
