--- a/init.profile.rc
+++ b/init.profile.rc
@@ -77,7 +77,7 @@ on property:persist.spectrum.profile=0
    write /dev/cpuset/system-background/cpus 0-2
    write /dev/cpuset/top-app/cpus 0-7
 
-# Governor settings by me: GlassFish 1.2
+# Performance (GlassFish 1.2)
 on property:persist.spectrum.profile=1
    # Frequency values
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 384000
